force-app/main/default/objects/NTO_Order__c/NTO_Order__c.object-meta.xml
<CustomObject>
    <description
  >NTO customer order. Lifetime value and risk are computed in Apex at query time from these records, not stored as rollup fields.</description>
    <label>NTO Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTO Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>