force-app/main/default/objects/NTO_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description
  >Owning customer. Lifetime value and order history are rolled up at query time by grouping on this lookup.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NTO Orders</relationshipLabel>
    <relationshipName>NTO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>