force-app/main/default/objects/NTO_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description
  >Human-facing order identifier. Marked as External ID so the Agentforce order-status action can look orders up by this value.</description>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>