force-app/main/default/objects/NTO_Order__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description
  >Order total. Summed in Apex at query time to compute customer lifetime value.</description>
    <label>Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>